# lorm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bump-version.sh  check.sh  coverage.sh  format.sh  gen-changelog.sh  release.sh  rust-toolchain.toml  test.sh
.cargo/: mutants.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  conventional-commits.yml  lorm.yml  release.yml  tag-release.yml  verify-gitsign-signatures.yml  verify-signatures.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-pr-body.md
.sisyphus/notepads/finish-mrpine-vision/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: finish-mrpine-vision.md
.sisyphus/plans/archived/: lorm-org-governance-community.md
examples/: README.md  basic_crud.rs  composite_pk.rs  query_builder.rs  relations.rs  test.rs  transactions.rs
lorm/: Cargo.toml  bump-version.sh  check.sh  coverage.sh  deploy.sh  format.sh  test.sh
lorm-macros/: Cargo.toml
lorm-macros/src/: attributes.rs  helpers.rs  lib.rs  models.rs  util.rs  utils.rs
lorm-macros/src/orm/: by.rs  column.rs  delete.rs  fk.rs  logical_field.rs  mod.rs  relations.rs  save.rs  select.rs  with.rs
lorm-macros/tests/compile_fail/: belongs_to_on_pk.rs  belongs_to_on_pk.stderr  belongs_to_self_non_option.rs  belongs_to_self_non_option.stderr  has_many_no_as_for_self.rs  has_many_no_as_for_self.stderr  has_many_through.rs  has_many_through.stderr  missing_belongs_to_target.rs  missing_belongs_to_target.stderr  unknown_key_in_has_many.rs  unknown_key_in_has_many.stderr
lorm/examples/: README.md  basic_crud.rs  query_builder.rs  transactions.rs
lorm/src/: errors.rs  lib.rs  predicates.rs
lorm/tests/: main.rs
lorm/tests/resources/migrations/: 01_users_table.sql  02_posts_table.sql  03_alt_users_table.sql  04_pairings_table.sql
lorm/tests/resources/migrations/mysql/: 01_users_table.sql  03_alt_users_table.sql  04_profiles_table.sql  05_customers_table.sql  06_opt_customers_table.sql  07_user_roles_table.sql  08_user_roles_named_table.sql  09_tags_table.sql  10_categories_table.sql  11_posts_table.sql  12_drafts_table.sql
lorm/tests/resources/migrations/postgres/: 01_users_table.sql  03_alt_users_table.sql  04_profiles_table.sql  05_customers_table.sql  06_opt_customers_table.sql  07_user_roles_table.sql  08_user_roles_named_table.sql  10_categories_table.sql  11_posts_table.sql  12_drafts_table.sql
lorm/tests/resources/migrations/sqlite/: 04_profiles_table.sql  05_customers_table.sql  06_opt_customers_table.sql  07_user_roles_table.sql  08_user_roles_named_table.sql  09_tags_table.sql  10_categories_table.sql  11_posts_table.sql
