[package]
name = "lorm-macros"
readme.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Macros for lorm, a zero cost and lightweight ORM operations for SQLx. Not intended to be used directly."

[lib]
proc-macro = true

[dependencies]
Inflector = { workspace = true, features = ["heavyweight"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["proc-macro", "derive", "parsing", "printing", "extra-traits"] }
pluralizer = { workspace = true }
proc-macro2 = "1.0.94"

[features]
default = ["sqlite"]
postgres = []
sqlite = []
mysql = []
