[package]
name = "lorm-macros"
readme.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Macros for lorm, a zero cost and lightweight ORM operations for SQLx. Not intended to be used directly."

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
heck = { workspace = true }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["proc-macro", "derive", "parsing", "printing", "extra-traits"] }
pluralizer = { workspace = true }
darling = "0.23.0"

[features]
default = ["sqlite"]
postgres = []
sqlite = []
mysql = []
