[package]
name = "lorm-macros"
readme.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Macros for lorm, a zero cost and lightweight ORM operations for SQLx. Not intended to be used directly."

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
heck = { workspace = true }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["proc-macro", "derive", "parsing", "printing", "extra-traits"] }
pluralizer = { workspace = true }
darling = "0.23.0"

[features]
default = ["sqlite"]
postgres = []
sqlite = []
mysql = []

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
lorm = { path = "../lorm", version = "0.4.7", default-features = false, features = ["sqlite"] }
sqlx = { workspace = true, features = ["derive", "sqlite", "uuid"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["std"] }
