[package]
name = "lorm"
readme.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A zero cost and lightweight ORM operations for SQLx."
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["sqlite"]
sqlite = ["lorm-macros/sqlite", "sqlx/sqlite"]
postgres = ["lorm-macros/postgres", "sqlx/postgres"]
mysql = ["lorm-macros/mysql", "sqlx/mysql"]

[dependencies]
lorm-macros = { path = "../lorm-macros", version = "0", optional = true }
sqlx = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["std", "derive"] }
thiserror = { workspace = true, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls", "chrono", "derive", "uuid", "migrate"] }
chrono = { workspace = true, features = ["std", "serde"] }
uuid = { workspace = true, features = ["std", "serde", "v4"] }
fake = { workspace = true }
anyhow = { workspace = true }
